--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>On-The-House</name>
-  <description>Backend to provided information about locations and users</description>
+  <description>Backend to provided information about businesses locations, ongoing raffles, and users</description>
   <properties>
-          <spring.version>4.3.10.RELEASE</spring.version>
+          <spring.version>5.1.5.RELEASE</spring.version>
 </properties>
   <dependencies>
   
